--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "start": "node dist/index.js"
     },
     "dependencies": {
-      "@marinade.finance/marinade-ts-sdk": "^5.0.2",
+      "@marinade.finance/native-staking-sdk": "^1.3.1",
       "@solana/web3.js": "^1.87.6"
     },
     "devDependencies": {
